2009-08-28  Andy Buckley  <andy@insectnation.org>

	* Changed naming convention for analysis plugin libraries, since
	the loader has changed so much: they must now *start* with the
	word "Rivet" (i.e. no lib prefix).

	* Split standard plugin analyses into several plugin libraries:
	these will eventually move into separate subdirs for extra build
	convenience.

	* Started merging analysis headers into the source files, now that
	we can (the plugin hooks previously forbade this).

	* Replacement of analysis loader system with a new one based on
	ideas from ThePEG, which uses dlopen-time instantiation of
	templated global variables to reduce boilerplate plugin hooks to
	one line in analyses.

2009-07-14  Frank Siegert  <frank.siegert@durham.ac.uk>

	* Replacing in-source histo-booking metadata with .plot files.

2009-07-14  Andy Buckley  <andy@insectnation.org>

	* Making Python wrapper files copy into place based on bundled
	versions for each active HepMC interface (2.3, 2.4 & 2.5), using a
	new HepMC version detector test in configure.

	* Adding YAML metadata files and parser, removing same metadata
	from the analysis classes' source headers.

2009-07-07  Andy Buckley  <andy@insectnation.org>

	* Adding Jet::hadronicEnergy()

	* Adding VisibleFinalState and automatically using it in JetAlg
	projections.

	* Adding YAML parser for new metadata (and eventually ref data)
	files.

2009-07-02  Andy Buckley  <andy@insectnation.org>

	* Adding Jet::neutralEnergy() (and Jet::totalEnergy() for
	convenience/symmetry).

2009-06-25  Andy Buckley  <andy@insectnation.org>

	* Tidying and small efficiency improvements in CDF_2008_S7541902
	W+jets analysis (remove unneeded second stage of jet storing,
	sorting the jets twice, using foreach, etc.).

2009-06-24  Andy Buckley  <andy@insectnation.org>

	* Fixing Jet's containsBottom and containsCharm methods, since B
	hadrons are not necessarily to be found in the final